--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "swiper": "^11.0.5",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
